--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta property="og:title" content="CourseBucket | UCR Course Resources" />
     <title>CourseBucket | UCR Course Resources</title>
   </head>
   <body>
